--- a/login/login.html
+++ b/login/login.html
@@ -12,7 +12,7 @@
         <p>Password</p>
         <input type="password" name="" placeholder="Enter Password">
         <input type="submit"name="" value="Login">
-        <a href="C:/Users/Administrator/Desktop/Coffee web/Forget Password/forgetpassword.html">Forget Password | </a> 
+        <a href="C:/Users/Administrator/Desktop/Coffee web/ForgetPassword/forgetpassword.html">Forget Password | </a> 
         <a href="C:/Users/Administrator/Desktop/Coffee web/Signin/Signin.html">Signin</a>
      </form>
     </div>
