change href login

--- a/login/login.html
+++ b/login/login.html
@@ -12,8 +12,8 @@
         <p>Password</p>
         <input type="password" name="" placeholder="Enter Password">
         <input type="submit"name="" value="Login">
-        <a href="/ForgetPassword/forgetpassword.html">Forget Password | </a> 
-        <a href="/Signin/Signin.html">Signin</a>
+        <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/ForgetPassword/forgetpassword.html">Forget Password | </a> 
+        <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/Signin/Signin.html">Signin</a>
      </form>
     </div>
 
