--- a/Home/home.html
+++ b/Home/home.html
@@ -7,7 +7,7 @@
         <li><a class="active" a href="https:///Home/home.html">Home</a></li>
         <li><a href="">Menu</a></li>
         <li><a href="">About Us</a></li>
-        <li style="float:right"><a href="https:///login/login.html">Login</a></li>
+        <li style="float:right"><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login</a></li>
         
       </ul>
       <div class="center">
