--- a/Signin/Signin.html
+++ b/Signin/Signin.html
@@ -3,6 +3,13 @@
 <title> login From Design </title>
     <link rel="stylesheet" type="text/css" href="Signin.css">
 <body>
+    <ul>
+        <li><a href="https:///Home/home.html">Home</a></li>
+        <li><a href="">Menu</a></li>
+        <li><a href="">About Us</a></li>
+        <li style="float:right"><a class="active" a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login</a></li>
+        
+      </ul>
     <div class="loginbox">
         <img src="usericon.png" class="usericon">
         <h1>Signin Here</h1>
@@ -14,7 +21,7 @@
         <p>E-mail</p>
         <input type="text" name="" placeholder="Enter E-mail">
         <input type="submit"name="" value="Signin">
-        <a href="C:/Users/Administrator/Desktop/Coffee web/login/login.html">Login  </a> 
+        <a href="https:///login/login.html">Login  </a> 
         
      </form>
     </div>
