--- a/ForgetPassword/forgetpassword.html
+++ b/ForgetPassword/forgetpassword.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title> login From Design </title>
+<title> Coffee Shop </title>
     <link rel="stylesheet" type="text/css" href="forgetpassword.css">
 <body>
     <ul>
-        <li><a href="https:///Home/home.html">Home</a></li>
+        <li><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/Home/home.html">Home</a></li>
         <li><a href="">Menu</a></li>
         <li><a href="">About Us</a></li>
         <li style="float:right"><a class="active" a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login</a></li>
@@ -17,8 +17,8 @@
         <p>Your Email</p>
         <input type="text" name="" placeholder="Enter E-mail">
         <input type="submit"name="" value="Send">
-        <a href="https:///login/login.html">Login | </a> 
-        <a href="https:///Signin/Signin.html">Signin</a>
+        <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login | </a> 
+        <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/Signin/Signin.html">Signin</a>
      </form>
     </div>
 
