--- a/login/login.html
+++ b/login/login.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title> login From Design </title>
+<title> Coffee Shop </title>
     <link rel="stylesheet" type="text/css" href="login.css">
 <body>
     <ul>
-        <li><a href="https:///Home/home.html">Home</a></li>
+        <li><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/Home/home.html">Home</a></li>
         <li><a href="">Menu</a></li>
         <li><a href="">About Us</a></li>
         <li style="float:right"><a class="active" a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login</a></li>
@@ -19,7 +19,7 @@
         <p>Password</p>
         <input type="password" name="" placeholder="Enter Password">
         <input type="submit"name="" value="Login">
-        <a href="https:///ForgetPassword/forgetpassword.html">Forget Password | </a> 
+        <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/ForgetPassword/forgetpassword.html">Forget Password | </a> 
         <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/Signin/Signin.html">Signin</a>
      </form>
     </div>
