--- a/menu/menu.html
+++ b/menu/menu.html
@@ -18,8 +18,8 @@
         <p class="espresso-content">Espresso</p>
         <img src="latte.jpg" class="latte" alt="latte">
         <p class="latte-content">Coffee latte</p>
-       <a href="#"> <img src="backicon.png" class="backicon" alt="backicon"></a>
-       <a href="#"> <img src="nexticon.png" class="nexticon" alt="nexticon"></a>
+      
+       <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/menu/menu1.html"> <img src="nexticon.png" class="nexticon" alt="nexticon"></a>
 
         
     </div>
