--- a/Home/home.html
+++ b/Home/home.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 <body>
     <ul>
-        <li><a class="active" a href="https:///Home/home.html">Home</a></li>
-        <li><a href="">Menu</a></li>
+        <li><a class="active" a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/Home/home.html">Home</a></li>
+        <li><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/menu/menu.html">Menu</a></li>
         <li><a href="">About Us</a></li>
         <li style="float:right"><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login</a></li>
         
