--- a/login/login.html
+++ b/login/login.html
@@ -5,7 +5,7 @@
 <body>
     <ul>
         <li><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/Home/home.html">Home</a></li>
-        <li><a href="">Menu</a></li>
+        <li><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/menu/menu.html">Menu</a></li>
         <li><a href="">About Us</a></li>
         <li style="float:right"><a class="active" a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login</a></li>
         
