--- a/Home/home.html
+++ b/Home/home.html
@@ -6,7 +6,7 @@
     <ul>
         <li><a class="active" a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/Home/home.html">Home</a></li>
         <li><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/menu/menu.html">Menu</a></li>
-        <li><a href="">About Us</a></li>
+        <li><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/AboutUs/aboutus.html">About Us</a></li>
         <li style="float:right"><a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/login/login.html">Login</a></li>
         
       </ul>
