--- a/Home/home.html
+++ b/Home/home.html
@@ -11,7 +11,7 @@
         
       </ul>
       <div class="center">
-        <a href="https:///Home/home.html"><input type="submit"name="" value="Visit Here"></a> 
+        <a href="https://napatsawan-fah.github.io/coffeeshop-webdesign/AboutUs/aboutus.html"><input type="submit"name="" value="Visit Here"></a> 
       </div>
 
 </body>
